--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     href="./index.html"><span class="accent">Web</span>studio</a>
                         <ul class="header-menu-list">
                             <li class="header-menu-item">
-                                <a href="./index.html" class="header-menu-link">Studio</a>
+                                <a href="./index.html" class="header-menu-link current">Studio</a>
                             </li>
 
                             <li class="header-menu-item">
