--- a/index.html
+++ b/index.html
@@ -78,6 +78,11 @@
                     <h2 class="visually-hidden">Our Features</h2>
                     <ul class="section-features-list">
                         <li class="section-features-item">
+                            <div class="section-features-icon">
+                                <svg class="section-features-icon-svg" width="64" height="64">
+                                    <use href="./images/icons/icons.svg#icon-antena"></use>
+                                </svg>
+                            </div>
                             <h3 class="section-features-subtitle">Strategy</h3>
                             <p class="section-features-text">
                                 Our goal is to identify the business problem to walk away with
@@ -86,6 +91,11 @@
                         </li>
 
                         <li class="section-features-item">
+                            <div class="section-features-icon">
+                                <svg class="section-features-icon-svg" width="64" height="64">
+                                    <use href="./images/icons/icons.svg#icon-clock"></use>
+                                </svg>
+                            </div>
                             <h3 class="section-features-subtitle">Punctuality</h3>
                             <p class="section-features-text">
                                 Bring the key message to the brand's audience for the best price
@@ -94,6 +104,11 @@
                         </li>
 
                         <li class="section-features-item">
+                            <div class="section-features-icon">
+                                <svg class="section-features-icon-svg" width="64" height="64">
+                                    <use href="./images/icons/icons.svg#icon-diagram"></use>
+                                </svg>
+                            </div>
                             <h3 class="section-features-subtitle">Diligence</h3>
                             <p class="section-features-text">
                                 Research and confirm brands with the strongest digital growth
@@ -102,6 +117,11 @@
                         </li>
 
                         <li class="section-features-item">
+                            <div class="section-features-icon">
+                                <svg class="section-features-icon-svg" width="64" height="64">
+                                    <use href="./images/icons/icons.svg#icon-astronaut"></use>
+                                </svg>
+                            </div>
                             <h3 class="section-features-subtitle">Technologies</h3>
                             <p class="section-features-text">
                                 Design practice focused on digital experiences. We bring forth
@@ -127,6 +147,39 @@
                             <div class="team-card">
                                 <h3 class="team-subtitle">Mark Guerrero</h3>
                                 <p class="team-text">Product Designer</p>
+                                <ul class="section-team-list">
+                                    <li class="section-team-item">
+                                        <a href="https://www.instagram.com" class="section-team-link">
+                                            <svg class="section-team-icon" width="40" height="40">
+                                                <use href="./images/icons/icons.svg#icon-instagram"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+
+                                    <li>
+                                        <a href="https://www.twitter.com" class="section-team-link">
+                                            <svg class="section-team-icon" width="40" height="40">
+                                                <use href="./images/icons/icons.svg#icon-twitter"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+
+                                    <li>
+                                        <a href="https://www.facebook.com" class="section-team-link">
+                                            <svg class="section-team-icon" width="40" height="40">
+                                                <use href="./images/icons/icons.svg#icon-facebook"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+
+                                    <li>
+                                        <a href="https://www.linkedin.com" class="section-team-link">
+                                            <svg class="section-team-icon" width="40" height="40">
+                                                <use href="./images/icons/icons.svg#icon-in"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                </ul>
                             </div>
                         </li>
 
@@ -141,6 +194,39 @@
                             <div class="team-card">
                                 <h3 class="team-subtitle">Tom Ford</h3>
                                 <p class="team-text">Frontend Developer</p>
+                                <ul class="section-team-list">
+                                    <li class="section-team-item">
+                                        <a href="https://www.instagram.com" class="section-team-link">
+                                            <svg class="section-team-icon" width="40" height="40">
+                                                <use href="./images/icons/icons.svg#icon-instagram"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+
+                                    <li>
+                                        <a href="https://www.twitter.com" class="section-team-link">
+                                            <svg class="section-team-icon" width="40" height="40">
+                                                <use href="./images/icons/icons.svg#icon-twitter"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+
+                                    <li>
+                                        <a href="https://www.facebook.com" class="section-team-link">
+                                            <svg class="section-team-icon" width="40" height="40">
+                                                <use href="./images/icons/icons.svg#icon-facebook"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+
+                                    <li>
+                                        <a href="https://www.linkedin.com" class="section-team-link">
+                                            <svg class="section-team-icon" width="40" height="40">
+                                                <use href="./images/icons/icons.svg#icon-in"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                </ul>
                             </div>
                         </li>
 
@@ -155,6 +241,39 @@
                             <div class="team-card">
                                 <h3 class="team-subtitle">Camila Garcia</h3>
                                 <p class="team-text">Marketing</p>
+                                <ul class="section-team-list">
+                                    <li class="section-team-item">
+                                        <a href="https://www.instagram.com" class="section-team-link">
+                                            <svg class="section-team-icon" width="40" height="40">
+                                                <use href="./images/icons/icons.svg#icon-instagram"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+
+                                    <li>
+                                        <a href="https://www.twitter.com" class="section-team-link">
+                                            <svg class="section-team-icon" width="40" height="40">
+                                                <use href="./images/icons/icons.svg#icon-twitter"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+
+                                    <li>
+                                        <a href="https://www.facebook.com" class="section-team-link">
+                                            <svg class="section-team-icon" width="40" height="40">
+                                                <use href="./images/icons/icons.svg#icon-facebook"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+
+                                    <li>
+                                        <a href="https://www.linkedin.com" class="section-team-link">
+                                            <svg class="section-team-icon" width="40" height="40">
+                                                <use href="./images/icons/icons.svg#icon-in"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                </ul>
                             </div>
                         </li>
 
@@ -169,6 +288,39 @@
                             <div class="team-card">
                                 <h3 class="team-subtitle">Daniel Wilson</h3>
                                 <p class="team-text">UI Designer</p>
+                            <ul class="section-team-list">
+                                    <li class="section-team-item">
+                                        <a href="https://www.instagram.com" class="section-team-link">
+                                            <svg class="section-team-icon" width="40" height="40">
+                                                <use href="./images/icons/icons.svg#icon-instagram"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+
+                                    <li>
+                                        <a href="https://www.twitter.com" class="section-team-link">
+                                            <svg class="section-team-icon" width="40" height="40">
+                                                <use href="./images/icons/icons.svg#icon-twitter"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+
+                                    <li>
+                                        <a href="https://www.facebook.com" class="section-team-link">
+                                            <svg class="section-team-icon" width="40" height="40">
+                                                <use href="./images/icons/icons.svg#icon-facebook"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+
+                                    <li>
+                                        <a href="https://www.linkedin.com" class="section-team-link">
+                                            <svg class="section-team-icon" width="40" height="40">
+                                                <use href="./images/icons/icons.svg#icon-in"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                </ul>
                             </div>
                         </li>
                     </ul>
@@ -184,6 +336,9 @@
                             <div class="portfolio-img-wrap">
                                 <img src="./images/banking_app.png" alt="banking app"
                                 width="360" height="300">
+                                <p class="overlay-text">
+                                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                                </p>
                             </div>
                             <div class="portfolio-content">
                                 <h3 class="portfolio-item-subtitle">Banking App</h3>
@@ -197,6 +352,9 @@
                             <div class="portfolio-img-wrap">
                                 <img src="./images/cashless_payment.png" alt="cashless payment"
                                 width="360" height="300">
+                                <p class="overlay-text">
+                                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                                </p>
                             </div>
                             <div class="portfolio-content">
                                 <h3 class="portfolio-item-subtitle">Cashless Payment</h3>
@@ -210,6 +368,9 @@
                             <div class="portfolio-img-wrap">
                                 <img src="./images/meditation_app.png" alt="meditation app"
                                 width="360" height="300">
+                                <p class="overlay-text">
+                                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                                </p>
                             </div>
                             <div class="portfolio-content">
                                 <h3 class="portfolio-item-subtitle">Meditation App</h3>
@@ -223,6 +384,9 @@
                             <div class="portfolio-img-wrap">
                                 <img src="./images/taxi_service.png" alt="taxi service"
                                 width="360" height="300">
+                                <p class="overlay-text">
+                                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                                </p>
                             </div>
                             <div class="portfolio-content">
                                 <h3 class="portfolio-item-subtitle">Taxi Service</h3>
@@ -236,6 +400,9 @@
                             <div class="portfolio-img-wrap">
                                 <img src="./images/screen_illustations.png" alt="screen illustations"
                                 width="360" height="300">
+                                <p class="overlay-text">
+                                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                                </p>
                             </div>
                             <div class="portfolio-content">
                                 <h3 class="portfolio-item-subtitle">Screen Illustrations</h3>
@@ -249,6 +416,9 @@
                             <div class="portfolio-img-wrap">
                                 <img src="./images/online_courses.png" alt="online courses"
                                 width="360" height="300">
+                                <p class="overlay-text">
+                                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                                </p>
                             </div>
                             <div class="portfolio-content">
                                 <h3 class="portfolio-item-subtitle">Online Courses</h3>
