--- a/index.html
+++ b/index.html
@@ -432,16 +432,55 @@
         </main>
 
         <footer class="footer">
-            <div class="container">
-                <a
-                    class="footer-logo"
-                    href="./index.html"><span class="footer-logo-accent">Web</span>studio
-                </a>
+            <div class="container container-footer">
+                <div class="container container-logo">
+                    <a
+                        class="footer-logo"
+                        href="./index.html"><span class="footer-logo-accent">Web</span>studio
+                    </a>
 
-                <p class="footer-text">
-                    Increase the flow of customers and sales for your business with
-                    digital marketing & growth solutions.
-                </p>
+                    <p class="footer-text">
+                        Increase the flow of customers and sales for your business with
+                        digital marketing & growth solutions.
+                    </p>
+                </div>
+
+                <div class="footer-socials">
+                    <p class="footer-social-title">Social media</p>
+                    <ul class="footer-socials-list">
+                        <li class="footer-social-item">
+                            <a href="https://www.instagram.com" class="footer-social-link">
+                                <svg class="footer-social-icon" width="40" height="40">
+                                    <use href="./images/icons/icons.svg#icon-instagram"></use>
+                                </svg>
+                            </a>
+                        </li>
+
+                        <li class="footer-social-item">
+                            <a href="https://www.twitter.com" class="footer-social-link">
+                                <svg class="footer-social-icon" width="40" height="40">
+                                    <use href="./images/icons/icons.svg#icon-twitter"></use>
+                                </svg>
+                            </a>
+                        </li>
+
+                        <li class="footer-social-item">
+                            <a href="https://www.facebook.com" class="footer-social-link">
+                                <svg class="footer-social-icon" width="40" height="40">
+                                    <use href="./images/icons/icons.svg#icon-facebook"></use>
+                                </svg>
+                            </a>
+                        </li>
+
+                        <li class="footer-social-item">
+                            <a href="https://www.linkedin.com" class="footer-social-link">
+                                <svg class="footer-social-icon" width="40" height="40">
+                                    <use href="./images/icons/icons.svg#icon-in"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </footer>
     </body>
