--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         <li class="section-features-item">
                             <div class="section-features-icon">
                                 <svg class="section-features-icon-svg" width="64" height="64">
-                                    <use href="./images/icons/icons.svg#icon-antena"></use>
+                                    <use href="./images/icons.svg#icon-antena"></use>
                                 </svg>
                             </div>
                             <h3 class="section-features-subtitle">Strategy</h3>
@@ -93,7 +93,7 @@
                         <li class="section-features-item">
                             <div class="section-features-icon">
                                 <svg class="section-features-icon-svg" width="64" height="64">
-                                    <use href="./images/icons/icons.svg#icon-clock"></use>
+                                    <use href="./images/icons.svg#icon-clock"></use>
                                 </svg>
                             </div>
                             <h3 class="section-features-subtitle">Punctuality</h3>
@@ -106,7 +106,7 @@
                         <li class="section-features-item">
                             <div class="section-features-icon">
                                 <svg class="section-features-icon-svg" width="64" height="64">
-                                    <use href="./images/icons/icons.svg#icon-diagram"></use>
+                                    <use href="./images/icons.svg#icon-diagram"></use>
                                 </svg>
                             </div>
                             <h3 class="section-features-subtitle">Diligence</h3>
@@ -119,7 +119,7 @@
                         <li class="section-features-item">
                             <div class="section-features-icon">
                                 <svg class="section-features-icon-svg" width="64" height="64">
-                                    <use href="./images/icons/icons.svg#icon-astronaut"></use>
+                                    <use href="./images/icons.svg#icon-astronaut"></use>
                                 </svg>
                             </div>
                             <h3 class="section-features-subtitle">Technologies</h3>
@@ -151,7 +151,7 @@
                                     <li class="section-team-item">
                                         <a href="https://www.instagram.com" class="section-team-link">
                                             <svg class="section-team-icon" width="40" height="40">
-                                                <use href="./images/icons/icons.svg#icon-instagram"></use>
+                                                <use href="./images/icons.svg#icon-instagram"></use>
                                             </svg>
                                         </a>
                                     </li>
@@ -159,7 +159,7 @@
                                     <li>
                                         <a href="https://www.twitter.com" class="section-team-link">
                                             <svg class="section-team-icon" width="40" height="40">
-                                                <use href="./images/icons/icons.svg#icon-twitter"></use>
+                                                <use href="./images/icons.svg#icon-twitter"></use>
                                             </svg>
                                         </a>
                                     </li>
@@ -167,7 +167,7 @@
                                     <li>
                                         <a href="https://www.facebook.com" class="section-team-link">
                                             <svg class="section-team-icon" width="40" height="40">
-                                                <use href="./images/icons/icons.svg#icon-facebook"></use>
+                                                <use href="./images/icons.svg#icon-facebook"></use>
                                             </svg>
                                         </a>
                                     </li>
@@ -175,7 +175,7 @@
                                     <li>
                                         <a href="https://www.linkedin.com" class="section-team-link">
                                             <svg class="section-team-icon" width="40" height="40">
-                                                <use href="./images/icons/icons.svg#icon-in"></use>
+                                                <use href="./images/icons.svg#icon-in"></use>
                                             </svg>
                                         </a>
                                     </li>
@@ -198,7 +198,7 @@
                                     <li class="section-team-item">
                                         <a href="https://www.instagram.com" class="section-team-link">
                                             <svg class="section-team-icon" width="40" height="40">
-                                                <use href="./images/icons/icons.svg#icon-instagram"></use>
+                                                <use href="./images/icons.svg#icon-instagram"></use>
                                             </svg>
                                         </a>
                                     </li>
@@ -206,7 +206,7 @@
                                     <li>
                                         <a href="https://www.twitter.com" class="section-team-link">
                                             <svg class="section-team-icon" width="40" height="40">
-                                                <use href="./images/icons/icons.svg#icon-twitter"></use>
+                                                <use href="./images/icons.svg#icon-twitter"></use>
                                             </svg>
                                         </a>
                                     </li>
@@ -214,7 +214,7 @@
                                     <li>
                                         <a href="https://www.facebook.com" class="section-team-link">
                                             <svg class="section-team-icon" width="40" height="40">
-                                                <use href="./images/icons/icons.svg#icon-facebook"></use>
+                                                <use href="./images/icons.svg#icon-facebook"></use>
                                             </svg>
                                         </a>
                                     </li>
@@ -222,7 +222,7 @@
                                     <li>
                                         <a href="https://www.linkedin.com" class="section-team-link">
                                             <svg class="section-team-icon" width="40" height="40">
-                                                <use href="./images/icons/icons.svg#icon-in"></use>
+                                                <use href="./images/icons.svg#icon-in"></use>
                                             </svg>
                                         </a>
                                     </li>
@@ -245,7 +245,7 @@
                                     <li class="section-team-item">
                                         <a href="https://www.instagram.com" class="section-team-link">
                                             <svg class="section-team-icon" width="40" height="40">
-                                                <use href="./images/icons/icons.svg#icon-instagram"></use>
+                                                <use href="./images/icons.svg#icon-instagram"></use>
                                             </svg>
                                         </a>
                                     </li>
@@ -253,7 +253,7 @@
                                     <li>
                                         <a href="https://www.twitter.com" class="section-team-link">
                                             <svg class="section-team-icon" width="40" height="40">
-                                                <use href="./images/icons/icons.svg#icon-twitter"></use>
+                                                <use href="./images/icons.svg#icon-twitter"></use>
                                             </svg>
                                         </a>
                                     </li>
@@ -261,7 +261,7 @@
                                     <li>
                                         <a href="https://www.facebook.com" class="section-team-link">
                                             <svg class="section-team-icon" width="40" height="40">
-                                                <use href="./images/icons/icons.svg#icon-facebook"></use>
+                                                <use href="./images/icons.svg#icon-facebook"></use>
                                             </svg>
                                         </a>
                                     </li>
@@ -269,7 +269,7 @@
                                     <li>
                                         <a href="https://www.linkedin.com" class="section-team-link">
                                             <svg class="section-team-icon" width="40" height="40">
-                                                <use href="./images/icons/icons.svg#icon-in"></use>
+                                                <use href="./images/icons.svg#icon-in"></use>
                                             </svg>
                                         </a>
                                     </li>
@@ -292,7 +292,7 @@
                                     <li class="section-team-item">
                                         <a href="https://www.instagram.com" class="section-team-link">
                                             <svg class="section-team-icon" width="40" height="40">
-                                                <use href="./images/icons/icons.svg#icon-instagram"></use>
+                                                <use href="./images/icons.svg#icon-instagram"></use>
                                             </svg>
                                         </a>
                                     </li>
@@ -300,7 +300,7 @@
                                     <li>
                                         <a href="https://www.twitter.com" class="section-team-link">
                                             <svg class="section-team-icon" width="40" height="40">
-                                                <use href="./images/icons/icons.svg#icon-twitter"></use>
+                                                <use href="./images/icons.svg#icon-twitter"></use>
                                             </svg>
                                         </a>
                                     </li>
@@ -308,7 +308,7 @@
                                     <li>
                                         <a href="https://www.facebook.com" class="section-team-link">
                                             <svg class="section-team-icon" width="40" height="40">
-                                                <use href="./images/icons/icons.svg#icon-facebook"></use>
+                                                <use href="./images/icons.svg#icon-facebook"></use>
                                             </svg>
                                         </a>
                                     </li>
@@ -316,7 +316,7 @@
                                     <li>
                                         <a href="https://www.linkedin.com" class="section-team-link">
                                             <svg class="section-team-icon" width="40" height="40">
-                                                <use href="./images/icons/icons.svg#icon-in"></use>
+                                                <use href="./images/icons.svg#icon-in"></use>
                                             </svg>
                                         </a>
                                     </li>
@@ -451,7 +451,7 @@
                         <li class="footer-social-item">
                             <a href="https://www.instagram.com" class="footer-social-link">
                                 <svg class="footer-social-icon" width="40" height="40">
-                                    <use href="./images/icons/icons.svg#icon-instagram"></use>
+                                    <use href="./images/icons.svg#icon-instagram"></use>
                                 </svg>
                             </a>
                         </li>
@@ -459,7 +459,7 @@
                         <li class="footer-social-item">
                             <a href="https://www.twitter.com" class="footer-social-link">
                                 <svg class="footer-social-icon" width="40" height="40">
-                                    <use href="./images/icons/icons.svg#icon-twitter"></use>
+                                    <use href="./images/icons.svg#icon-twitter"></use>
                                 </svg>
                             </a>
                         </li>
@@ -467,7 +467,7 @@
                         <li class="footer-social-item">
                             <a href="https://www.facebook.com" class="footer-social-link">
                                 <svg class="footer-social-icon" width="40" height="40">
-                                    <use href="./images/icons/icons.svg#icon-facebook"></use>
+                                    <use href="./images/icons.svg#icon-facebook"></use>
                                 </svg>
                             </a>
                         </li>
@@ -475,7 +475,7 @@
                         <li class="footer-social-item">
                             <a href="https://www.linkedin.com" class="footer-social-link">
                                 <svg class="footer-social-icon" width="40" height="40">
-                                    <use href="./images/icons/icons.svg#icon-in"></use>
+                                    <use href="./images/icons.svg#icon-in"></use>
                                 </svg>
                             </a>
                         </li>
