--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                                 <ul class="section-team-list">
                                     <li class="section-team-item">
                                         <a href="https://www.instagram.com" class="section-team-link">
-                                            <svg class="section-team-icon" width="40" height="40">
+                                            <svg class="section-team-icon" width="16" height="16">
                                                 <use href="./images/icons.svg#icon-instagram"></use>
                                             </svg>
                                         </a>
@@ -158,7 +158,7 @@
 
                                     <li>
                                         <a href="https://www.twitter.com" class="section-team-link">
-                                            <svg class="section-team-icon" width="40" height="40">
+                                            <svg class="section-team-icon" width="16" height="16">
                                                 <use href="./images/icons.svg#icon-twitter"></use>
                                             </svg>
                                         </a>
@@ -166,7 +166,7 @@
 
                                     <li>
                                         <a href="https://www.facebook.com" class="section-team-link">
-                                            <svg class="section-team-icon" width="40" height="40">
+                                            <svg class="section-team-icon" width="16" height="16">
                                                 <use href="./images/icons.svg#icon-facebook"></use>
                                             </svg>
                                         </a>
@@ -174,7 +174,7 @@
 
                                     <li>
                                         <a href="https://www.linkedin.com" class="section-team-link">
-                                            <svg class="section-team-icon" width="40" height="40">
+                                            <svg class="section-team-icon" width="16" height="16">
                                                 <use href="./images/icons.svg#icon-in"></use>
                                             </svg>
                                         </a>
@@ -197,7 +197,7 @@
                                 <ul class="section-team-list">
                                     <li class="section-team-item">
                                         <a href="https://www.instagram.com" class="section-team-link">
-                                            <svg class="section-team-icon" width="40" height="40">
+                                            <svg class="section-team-icon" width="16" height="16">
                                                 <use href="./images/icons.svg#icon-instagram"></use>
                                             </svg>
                                         </a>
@@ -205,7 +205,7 @@
 
                                     <li>
                                         <a href="https://www.twitter.com" class="section-team-link">
-                                            <svg class="section-team-icon" width="40" height="40">
+                                            <svg class="section-team-icon" width="16" height="16">
                                                 <use href="./images/icons.svg#icon-twitter"></use>
                                             </svg>
                                         </a>
@@ -213,7 +213,7 @@
 
                                     <li>
                                         <a href="https://www.facebook.com" class="section-team-link">
-                                            <svg class="section-team-icon" width="40" height="40">
+                                            <svg class="section-team-icon" width="16" height="16">
                                                 <use href="./images/icons.svg#icon-facebook"></use>
                                             </svg>
                                         </a>
@@ -221,7 +221,7 @@
 
                                     <li>
                                         <a href="https://www.linkedin.com" class="section-team-link">
-                                            <svg class="section-team-icon" width="40" height="40">
+                                            <svg class="section-team-icon" width="16" height="16">
                                                 <use href="./images/icons.svg#icon-in"></use>
                                             </svg>
                                         </a>
@@ -244,7 +244,7 @@
                                 <ul class="section-team-list">
                                     <li class="section-team-item">
                                         <a href="https://www.instagram.com" class="section-team-link">
-                                            <svg class="section-team-icon" width="40" height="40">
+                                            <svg class="section-team-icon" width="16" height="16">
                                                 <use href="./images/icons.svg#icon-instagram"></use>
                                             </svg>
                                         </a>
@@ -252,7 +252,7 @@
 
                                     <li>
                                         <a href="https://www.twitter.com" class="section-team-link">
-                                            <svg class="section-team-icon" width="40" height="40">
+                                            <svg class="section-team-icon" width="16" height="16">
                                                 <use href="./images/icons.svg#icon-twitter"></use>
                                             </svg>
                                         </a>
@@ -260,7 +260,7 @@
 
                                     <li>
                                         <a href="https://www.facebook.com" class="section-team-link">
-                                            <svg class="section-team-icon" width="40" height="40">
+                                            <svg class="section-team-icon" width="16" height="16">
                                                 <use href="./images/icons.svg#icon-facebook"></use>
                                             </svg>
                                         </a>
@@ -268,7 +268,7 @@
 
                                     <li>
                                         <a href="https://www.linkedin.com" class="section-team-link">
-                                            <svg class="section-team-icon" width="40" height="40">
+                                            <svg class="section-team-icon" width="16" height="16">
                                                 <use href="./images/icons.svg#icon-in"></use>
                                             </svg>
                                         </a>
@@ -291,7 +291,7 @@
                             <ul class="section-team-list">
                                     <li class="section-team-item">
                                         <a href="https://www.instagram.com" class="section-team-link">
-                                            <svg class="section-team-icon" width="40" height="40">
+                                            <svg class="section-team-icon" width="16" height="16">
                                                 <use href="./images/icons.svg#icon-instagram"></use>
                                             </svg>
                                         </a>
@@ -299,7 +299,7 @@
 
                                     <li>
                                         <a href="https://www.twitter.com" class="section-team-link">
-                                            <svg class="section-team-icon" width="40" height="40">
+                                            <svg class="section-team-icon" width="16" height="16">
                                                 <use href="./images/icons.svg#icon-twitter"></use>
                                             </svg>
                                         </a>
@@ -307,7 +307,7 @@
 
                                     <li>
                                         <a href="https://www.facebook.com" class="section-team-link">
-                                            <svg class="section-team-icon" width="40" height="40">
+                                            <svg class="section-team-icon" width="16" height="16">
                                                 <use href="./images/icons.svg#icon-facebook"></use>
                                             </svg>
                                         </a>
@@ -315,7 +315,7 @@
 
                                     <li>
                                         <a href="https://www.linkedin.com" class="section-team-link">
-                                            <svg class="section-team-icon" width="40" height="40">
+                                            <svg class="section-team-icon" width="16" height="16">
                                                 <use href="./images/icons.svg#icon-in"></use>
                                             </svg>
                                         </a>
@@ -334,7 +334,7 @@
                     <li class="portfolio-item">
                         <div class="portfolio-list-container">
                             <div class="portfolio-img-wrap">
-                                <img src="./images/banking_app.png" alt="banking app"
+                                <img src="./images/banking_app.jpg" alt="banking app"
                                 width="360" height="300">
                                 <p class="overlay-text">
                                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
@@ -350,7 +350,7 @@
                     <li class="portfolio-item">
                         <div class="portfolio-list-container">
                             <div class="portfolio-img-wrap">
-                                <img src="./images/cashless_payment.png" alt="cashless payment"
+                                <img src="./images/cashless_payment.jpg" alt="cashless payment"
                                 width="360" height="300">
                                 <p class="overlay-text">
                                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
@@ -366,7 +366,7 @@
                     <li class="portfolio-item">
                         <div class="portfolio-list-container">
                             <div class="portfolio-img-wrap">
-                                <img src="./images/meditation_app.png" alt="meditation app"
+                                <img src="./images/meditation_app.jpg" alt="meditation app"
                                 width="360" height="300">
                                 <p class="overlay-text">
                                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
@@ -382,7 +382,7 @@
                     <li class="portfolio-item">
                         <div class="portfolio-list-container">
                             <div class="portfolio-img-wrap">
-                                <img src="./images/taxi_service.png" alt="taxi service"
+                                <img src="./images/taxi_service.jpg" alt="taxi service"
                                 width="360" height="300">
                                 <p class="overlay-text">
                                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
@@ -398,7 +398,7 @@
                     <li class="portfolio-item">
                         <div class="portfolio-list-container">
                             <div class="portfolio-img-wrap">
-                                <img src="./images/screen_illustations.png" alt="screen illustations"
+                                <img src="./images/screen_illustrations.jpg" alt="screen illustations"
                                 width="360" height="300">
                                 <p class="overlay-text">
                                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
@@ -414,7 +414,7 @@
                     <li class="portfolio-item">
                         <div class="portfolio-list-container">
                             <div class="portfolio-img-wrap">
-                                <img src="./images/online_courses.png" alt="online courses"
+                                <img src="./images/online_courses.jpg" alt="online courses"
                                 width="360" height="300">
                                 <p class="overlay-text">
                                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
@@ -450,7 +450,7 @@
                     <ul class="footer-socials-list">
                         <li class="footer-social-item">
                             <a href="https://www.instagram.com" class="footer-social-link">
-                                <svg class="footer-social-icon" width="40" height="40">
+                                <svg class="footer-social-icon" width="24" height="24">
                                     <use href="./images/icons.svg#icon-instagram"></use>
                                 </svg>
                             </a>
@@ -458,7 +458,7 @@
 
                         <li class="footer-social-item">
                             <a href="https://www.twitter.com" class="footer-social-link">
-                                <svg class="footer-social-icon" width="40" height="40">
+                                <svg class="footer-social-icon" width="24" height="24">
                                     <use href="./images/icons.svg#icon-twitter"></use>
                                 </svg>
                             </a>
@@ -466,7 +466,7 @@
 
                         <li class="footer-social-item">
                             <a href="https://www.facebook.com" class="footer-social-link">
-                                <svg class="footer-social-icon" width="40" height="40">
+                                <svg class="footer-social-icon" width="24" height="24">
                                     <use href="./images/icons.svg#icon-facebook"></use>
                                 </svg>
                             </a>
@@ -474,7 +474,7 @@
 
                         <li class="footer-social-item">
                             <a href="https://www.linkedin.com" class="footer-social-link">
-                                <svg class="footer-social-icon" width="40" height="40">
+                                <svg class="footer-social-icon" width="24" height="24">
                                     <use href="./images/icons.svg#icon-in"></use>
                                 </svg>
                             </a>
